# show-me

./: README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
doc/: Invock接口.md  Invoke接口.md  LCU接口访问指南.md  SGP接口访问指南.md  lcu.md  战绩查询.md  玩家数据查询.md  静态资源获取.md
doc/example/: SGP_01.json  SGP_02.json  SGP_03.json
src/: App.vue  App2.vue  lcu.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cer.rs  lcu.rs  lib.rs  main.rs  sgp.rs
src-tauri/src/cer/: data.rs
src-tauri/src/lcu/: http.rs  parameter.rs  websocket.rs
src/API/: assets.js  home.js  layout.js  query.js  userInfo.js
src/components/: GameDetail.vue  GameItem.vue  GameList.vue  Querry.vue  SummonerInfo.vue  UserInfo.vue
src/components/pagination/: index.vue
src/components/recordList/: index.vue
src/components/summonerInfo/: index.vue
src/components/summonerItem/: index.vue
src/components/svgIcon/: index.js  index.vue
src/layout/: index.vue
src/layout/asideCard/: index.vue
src/layout/headerCard/: index.vue
src/localStorage/: config.js  summoner.js
src/modules/: Game.js  ItemData.js  Match.js  PerkData.js  RankStatus.js  SGP_SERVER_LIST.js  SpellData.js  Summoner.js
src/router/: index.ts
src/store/: config.js  static.js
src/stors/: config.ts  match.ts  summoner.ts
src/stors/store/: static.js  summoner.js
src/types/: Match.ts  RankedStats.ts  Summoner.ts
src/utils/: axios.js  base.js  getImgUrl.js  request.js  wrappedInvoke.js
src/views/home/: index.vue
src/views/search/: index.vue
(+27 files in other folders)
