[package]
name = "show-me"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["http-all", "shell-open", "window-all"] }
serde = { version = "1.0" }
serde_json = "1.0"
window-shadows = "0.2.1"
env_logger = "0.10.0"
log = "0.4.17"
# windows-sys = { version = "0.48.0", features = [
#     "Win32_System_ProcessStatus",
#     "Win32_Foundation",
#     "Win32_System_Threading",
#     "Win32_System_Kernel",
#     "Win32_System_Diagnostics_Debug",
# ] }
sysinfo = "0.29.0"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
# once_cell = "1.18.0"
tokio = "1.28.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
